--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
       .center {
         text-align: center;
       }
+      
+      @media only screen and (max-width: 1024px) {
+        .illustration {
+          width: 90%;
+        }
+      }
 
       @keyframes float {
       0% {
