--- a/index.html
+++ b/index.html
@@ -49,8 +49,16 @@
       }
       
       @media only screen and (max-width: 1024px) {
+        .wrapper {
+          width: 70%;
+        }
+
+        .bubble {
+          font-size: 24px;
+        }
+
         .illustration {
-          width: 90%;
+          width: 70%;
         }
       }
 
