--- a/index.html
+++ b/index.html
@@ -48,17 +48,18 @@
         text-decoration: underline;
       }
       
-      @media only screen and (max-width: 1024px) {
+      @media only screen and (max-width: 1024px) and (min-height: 720px) {
         .wrapper {
           width: 70%;
         }
 
         .bubble {
+          padding: 24px 32px;
           font-size: 24px;
         }
 
         .illustration {
-          width: 70%;
+          width: 60%;
         }
       }
 
