--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>4210181021 - Mini App</title>
+    <title>4210181021 - Create Mini App</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
       
